04-istio-mtls-authz/manifests/peer-auth-strict.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: default-strict
  namespace: shop
spec:
  mtls:
    mode: STRICT
